--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.12.3",
+    "@chakra-ui/react": "1.2.1",
+    "@emotion/react": "11.1.4",
+    "@emotion/styled": "11.0.0",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
     "@svgr/webpack": "5.5.0",
     "@testing-library/jest-dom": "^5.14.1",
@@ -34,6 +37,7 @@
     "eslint-webpack-plugin": "^2.5.2",
     "file-loader": "6.1.1",
     "firebase": "^9.1.1",
+    "framer-motion": "3.3.0",
     "fs-extra": "^9.0.1",
     "html-webpack-plugin": "4.5.0",
     "identity-obj-proxy": "3.0.0",
@@ -57,6 +61,7 @@
     "react-refresh": "^0.8.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.3.0",
+    "react-stl-file-viewer": "0.0.5",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "^10.0.5",
