--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-jest": "^26.6.0",
     "babel-loader": "8.1.0",
     "babel-plugin-named-asset-import": "^0.3.7",
+    "babel-plugin-polyfill-corejs3": "^0.10.4",
     "babel-preset-react-app": "^10.0.0",
     "bfj": "^7.0.2",
     "camelcase": "^6.1.0",
@@ -58,9 +59,11 @@
     "react-app-polyfill": "^2.0.0",
     "react-dev-utils": "^11.0.3",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^2.2.0",
     "react-refresh": "^0.8.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.3.0",
+    "react-scripts": "3.4.3",
     "react-stl-file-viewer": "0.0.5",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
